<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.thaariq.MusicPlayerApp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/sf_pro_bold"
            android:text="@string/greeting"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <GridLayout
            android:id="@+id/gl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:columnCount="3"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_1"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:layout_row="0"
                android:layout_column="0"
                android:backgroundTint="#605f5f5f">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/mishary"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textSize="12sp"
                        android:text="@string/mishary"
                        android:textColor="@color/white"
                        android:layout_marginStart="8dp"
                        android:layout_marginVertical="13dp"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_2"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="8dp"
                android:backgroundTint="#605f5f5f">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/taha"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textSize="12sp"
                        android:text="@string/taha"
                        android:textColor="@color/white"
                        android:layout_marginStart="8dp"
                        android:layout_marginVertical="13dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_3"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="8dp"
                android:backgroundTint="#605f5f5f">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/muzammil"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textSize="12sp"
                        android:text="@string/muzammil"
                        android:textColor="@color/white"
                        android:layout_marginStart="8dp"
                        android:layout_marginVertical="13dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_4"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:backgroundTint="#605f5f5f">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/yasser"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textSize="12sp"
                        android:text="@string/yasser"
                        android:textColor="@color/white"
                        android:layout_marginStart="8dp"
                        android:layout_marginVertical="13dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_5"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#605f5f5f">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/abdurrahman"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textSize="12sp"
                        android:text="@string/abdurrahmanNotComplete"
                        android:textColor="@color/white"
                        android:layout_marginStart="8dp"
                        android:layout_marginVertical="14dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_6"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#605f5f5f">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/fatih"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textSize="12sp"
                        android:text="@string/fatih"
                        android:textColor="@color/white"
                        android:layout_marginStart="8dp"
                        android:layout_marginVertical="13dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="Lectures for you"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/hsv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="15dp"
                        app:cardCornerRadius="100dp">
                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/zaen" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/img"
                        app:layout_constraintStart_toStartOf="@id/img"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textColor="@color/white"
                        android:text="@string/zaen" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/hsv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/khalid"
                        android:layout_marginTop="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/img2"
                        app:layout_constraintStart_toStartOf="@id/img2"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textColor="@color/white"
                        android:text="@string/khalid" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/hsv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp">

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/syafiq"
                        android:layout_marginTop="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/img3"
                        app:layout_constraintStart_toStartOf="@id/img3"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textColor="@color/white"
                        android:text="@string/syafiq" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/hsv_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/badrussalam"
                        android:layout_marginTop="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/img4"
                        app:layout_constraintStart_toStartOf="@id/img4"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sf_pro_bold"
                        android:textColor="@color/white"
                        android:text="@string/badrussalam" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="Recently Played"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_music_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>